# 100-pandas-exercise

./: README.md
100_pandas_exercise/: Makefile  README.md  pyproject.toml
100_pandas_exercise/100_pandas_exercise/: __init__.py  dataset.py  features.py  plots.py
100_pandas_exercise/100_pandas_exercise/modeling/: predict.py  train.py
100_pandas_exercise/docs/: mkdocs.yml
100_pandas_exercise/docs/docs/: index.md
data/preprocessed/: geocode_eng.csv
notebooks_vn/exercises/: 100_bai_tap_pandas_vn_exes.ipynb
notebooks_vn/pandas_basic/: learn_pandas.ipynb  pandas_basic.ipynb  time_series_tuan.csv  time_series_tuan.xlsx
