[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "100_pandas_exercise"
version = "0.0.1"
description = "100 pandas exercise for data analysis"
authors = [
  { name = "tuanvo-ai" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["100_pandas_exercise"]
force_sort_within_sections = true
